<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zt.rainbowweather.ui.activity.DXiangLiActivity">

    <include layout="@layout/head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dxiangli_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_A30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/crazy_dream_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:padding="14dp"
                    android:text="@string/chanxiangli"
                    android:textColor="@color/service_tv"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/danxiangli_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="8dp"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:text="@string/distance"
                    android:textColor="@color/service_tv"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15">

                    <TextView
                        android:id="@+id/danxiangli_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/poet"
                        android:textColor="@color/service_tv" />

                    <TextView
                        android:id="@+id/danxiangli_author_production"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/book_title"
                        android:textColor="@color/service_tv"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@mipmap/almanac_bg">

                <LinearLayout
                    android:id="@+id/dxiangli_year_lin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:background="@color/almanac_tv" />

                    <TextView
                        android:id="@+id/dxiangli_sui_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/unar_calendar_year"
                        android:textColor="@color/almanac_tv"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:background="@color/almanac_tv" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dxiangli_year_lin"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/dxiangli_m"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dxl_month"
                            android:textColor="@color/nb_text_common_h2"
                            android:textSize="16sp" />

                        <com.zt.rainbowweather.view.ChangeTextViewSpace
                            android:id="@+id/dxiangli_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dp_10"
                            android:text="@string/dxiangli_tv"
                            android:textColor="@color/dxl"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/dxiangli_week"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dxiangli_week"
                            android:textColor="@color/nb_text_common_h2"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/dxiangli_NongLiMonthDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dxiangli_NongLiMonthDay"
                        android:textColor="@color/nb_text_common_h2"
                        android:textSize="79sp" />

                    <TextView
                        android:id="@+id/dxiangli_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dxiangli_text"
                        android:textColor="@color/nb_text_common_h2"
                        android:textSize="40sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>