<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_A30"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/head"
            android:visibility="gone" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@mipmap/service_head_bg"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/service_bar"
                />
            <RelativeLayout
                android:id="@+id/service_rel"
                android:layout_width="match_parent"
                android:layout_below="@+id/service_bar"
                android:layout_height="110dp">
                <TextView
                    android:id="@+id/binding_weChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="绑定微信"
                    android:textSize="13sp"
                    android:textColor="#ffd1eaff"
                    android:drawableRight="@drawable/skip_icon"
                    android:drawablePadding="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:layout_marginTop="25dp"
                    android:visibility="gone"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/defa_head" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/img_avatar"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/text_white"
                            android:text="用户ID:"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_fans"
                            style="@style/text_white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp"
                            android:text="ID:*********"
                            android:textSize="16sp"

                            />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:layout_below="@+id/service_rel"
                android:id="@+id/view_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:elevation="4dp"
                app:cardElevation="4dp"
                android:orientation="vertical"
                app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/tablayout_service_lin"
                android:orientation="vertical">

                <com.zt.rainbowweather.view.tab.SlidingTabLayout
                    android:id="@+id/tablayout_service_vp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    app:tl_indicator_corner_radius="1.5dp"
                    app:tl_indicator_height="3dp"
                    app:tl_indicator_width="20dp"/>
                <!--<android.support.design.widget.TabLayout-->

                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:tabBackground="@null"-->
                <!--app:tabIndicatorColor="@color/selector"-->
                <!--app:tabIndicatorFullWidth="true"-->
                <!--app:tabMode="fixed"-->
                <!--app:tabSelectedTextColor="@color/nb_text_common_h1"-->
                <!--app:tabTextColor="@color/tab_select"/>-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@color/nb_divider_narrow" />

                <com.xy.xylibrary.view.CustomScrollViewPager
                    android:id="@+id/viewpager_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            </android.support.v7.widget.CardView>
            <ImageView
                android:id="@+id/promptly_sign_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/view_card"
                android:layout_marginBottom="5dp"
                android:background="@mipmap/promptly_sign_bg1"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/serve_txt_lin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/serve_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dp_10"
                android:text="@string/serve_txt"
                android:visibility="gone"
                android:textColor="@color/nb_text_common_h1"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:visibility="gone"
                android:background="@color/nb_divider_narrow" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="gone"
                android:overScrollMode="never" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dp_10"
                android:text="@string/instrument"
                android:textColor="@color/service_tv"
                android:textSize="@dimen/sp_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="@color/nb_divider_narrow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <FrameLayout
                android:id="@+id/banner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/GDT_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </RelativeLayout>

            <include layout="@layout/ad_item" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <com.check.ox.sdk.LionStreamerView
                android:id="@+id/TMBrView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:TMBr_size="TMBr" />
        </LinearLayout>

        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/open_notification_bar"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_arrow_visibility="false"
            app:mine_icon="@drawable/weather_noticeicon"
            app:mine_title="@string/open_notification_bar">


            <include layout="@layout/compat_switch_night_mode" />
        </com.zt.rainbowweather.view.MineRowView>

        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/skin_is_set"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_icon="@drawable/skin_icon"
            app:mine_title="@string/skin_is_set" />

        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_icon="@drawable/clear_icon"
            app:mine_arrow_visibility="false"
            app:mine_title="@string/clear_cache" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                >
           <TextView
               android:id="@+id/cache_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="0.0M"
               android:layout_marginRight="10dp"
               />
            <ImageView
                android:id="@+id/arrow"
                android:layout_width="14dp"
                android:layout_height="14dp"
                app:srcCompat="@drawable/ic_vector_arrow_open"/>
            </LinearLayout>
    </com.zt.rainbowweather.view.MineRowView>
        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/message_feedback"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_icon="@drawable/message_feedbackicon"
            app:mine_title="@string/message_feedback" />


        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/widget"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_icon="@drawable/ic_loyalty_black"
            app:mine_title="@string/widget" />

        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_icon="@drawable/about_us_icon"
            app:mine_title="@string/about_us" />

        <com.zt.rainbowweather.view.MineRowView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg4"
            android:clickable="true"
            app:mine_divider_visibility="false"
            app:mine_icon="@mipmap/ic_set_my"
            android:layout_marginBottom="20dp"
            app:mine_title="@string/setting" />
    </LinearLayout>
</ScrollView>